# lnx-cli

./: Cargo.toml  README.md
benchmark/: Cargo.toml
benchmark/src/: lib.rs  lnx.rs  meilisearch.rs  sampler.rs  shared.rs  typesense.rs
demo/: Cargo.toml
demo/src/: lib.rs  routes.rs
demo/static/: index.html
samples/: simple-search-words.json
src/: main.rs
