[package]
name = "demo"
version = "0.1.0"
authors = ["Harrison Burt <57491488+ChillFish8@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["json"] }
hyper = { version = "0.14", features = ["server", "http1", "http2"] }
axum = "0.2.8"
serde_json = "1"
once_cell = "1.8"
log = "0.4"
num_cpus = "1.13"